--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,18 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
+    "@hono/zod-openapi": "^1.1.0",
+    "@hono/zod-validator": "^0.7.2",
+    "@scalar/hono-api-reference": "^0.9.13",
+    "add": "^2.0.6",
     "better-auth": "^1.3.0",
     "drizzle-orm": "^0.44.3",
     "hono": "^4.8.5",
+    "hono-openapi": "^0.4.8",
     "pg": "^8.16.3",
-    "resend": "^4.7.0"
+    "resend": "^4.7.0",
+    "zod": "^4.0.17",
+    "zod-openapi": "^5.3.1"
   },
   "devDependencies": {
     "@types/bun": "latest",
